--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "vitest run --coverage",
     "test:e2e": "playwright test",
-    "e2e": "playwright test",
     "e2e:headed": "PW_BASE_URL=https://localhost playwright test --headed --project=chromium",
     "e2e:report": "playwright show-report",
     "test:watch": "vitest --watch",
@@ -60,7 +59,7 @@
     "docker:run": "docker compose up -d",
     "docker:stop": "docker compose down",
     "docker:logs": "docker compose logs -f",
-    "security:scan": "npm audit && docker run --rm -v $(pwd):/src securecodewarrior/docker-gosec /src/auth/...",
+    "security:scan": "npm audit --audit-level=high && docker run --rm -v $(pwd)/auth:/src -w /src securecodewarrior/docker-gosec ./...",
     "prepare": "husky install",
     "commit": "git-cz",
     "release": "semantic-release",
