--- a/secrets/redis_exporter_url.txt.example
+++ b/secrets/redis_exporter_url.txt.example
@@ -1,3 +1,3 @@
-# URL для redis-exporter
-# Формат: redis://:<password>@redis:6379
-redis://:CHANGE_ME_REDIS_PASSWORD@redis:6379
+# Пароли для redis-exporter в JSON формате:
+# ключ — redis://host:port, значение — пароль (или "" если auth отключён).
+{"redis://redis:6379":"CHANGE_ME_REDIS_PASSWORD"}
